<resources>
    <string name="app_name">Tour Guide</string>
    <string name="city_name">Bucharest</string>
    <string name="details_title">Details</string>
    <string name="categories_title">Categories</string>
    <string name="about_section_title">About</string>
    <string name="details_section_title">Details</string>
    <string name="details_address_title">Address:</string>
    <string name="details_hours_title">Hours:</string>
    <string name="details_phone_title">Phone:</string>
    <string name="details_call_btn">Call</string>
    <string name="details_directions_btn">Get Directions</string>
    <string name="cat_museums">Museums</string>
    <string name="cat_parks">Parks</string>
    <string name="cat_palaces">Palaces</string>
    <string name="cat_monuments">Monuments</string>
    <string name="cd_back_btn">Back Button</string>
    <string name="cd_header_img">Header Image</string>
    <string name="cd_header_ovrl">Header Overlay</string>
    <string name="cd_content_bg">Content Background</string>
    <string name="cd_category_item_bg">Category Item Background</string>
    <string name="cd_category_item_arr">Open Item</string>
    <string name="cd_main_bg_img">Main Background Image</string>
    <string name="cd_fancy_btn">Fancy Button Icon</string>
    <string-array name="museums_names">
        <item>National Art Museum of Romania</item>
        <item>Dimitrie Gusti National Village Museum</item>
        <item>Grigore Antipa National Museum of Natural History</item>
        <item>Romanian Peasant Museum</item>
        <item>National Museum of Romanian History</item>
        <item>Curtea Veche</item>
        <item>National Museum of Contemporary Art</item>
        <item>Jewish Museum</item>
        <item>National Military Museum</item>
        <item>Museum of the Romanian Railways</item>
    </string-array>
    <string-array name="museums_addresses">
        <item>Calea Victoriei 49&#8211;53, Bucharest</item>
        <item>Șoseaua Pavel Dimitrievici Kiseleff 28&#8211;30, Sector 1, Bucharest</item>
        <item>Șoseaua Pavel Dimitrievici Kiseleff 1, Bucharest</item>
        <item>Șoseaua Pavel Dimitrievici Kiseleff 3, Bucharest</item>
        <item>Calea Victoriei 12, Bucharest</item>
        <item>Strada Franceză 25, Bucharest</item>
        <item>Strada Izvor 2&#8211;4, Bucharest</item>
        <item>Intrarea Mămulari 3, Bucharest</item>
        <item>Strada Mircea Vulcănescu 125&#8211;127, Bucharest</item>
        <item>Strada Gării de Nord, Bucharest</item>
    </string-array>
    <string-array name="museums_descriptions">
        <item>The National Museum of Art of Romania (Romanian: Muzeul Național de Artă al României) is located in the Royal Palace in Revolution Square, central Bucharest. It features collections of medieval and modern Romanian art, as well as the international collection assembled by the Romanian royal family.</item>
        <item>The Village Museum is an open-air ethnographic museum located in the Herăstrău Park, showcasing traditional Romanian village life. The museum extends to over 100,000 meters square, and contains 272 authentic peasant farms and houses from all over Romania.</item>
        <item>The Grigore Antipa National Museum of Natural History is a Natural History museum, located in Bucharest, Romania. It was originally established as the National Museum of Natural History on 3 November 1834.</item>
        <item>The National Museum of the Romanian Peasant is a museum in Bucharest, Romania, with a collection of textiles, icons, ceramics, and other artifacts of Romanian peasant life.</item>
        <item>The National Museum of Romanian History is a museum located on Calea Victoriei in Bucharest, Romania, which contains Romanian historical artifacts from prehistoric times up to modern times.</item>
        <item>Curtea Veche was built as a palace or residence during the rule of Vlad III Dracula in 1459. Archaeological excavations started in 1953, and now the site is operated by the Muzeul Municipiului Bucuresti in the historic centre of Bucharest, Romania.</item>
        <item>The National Museum of Contemporary Art is a contemporary art museum in Bucharest, Romania. The museum is located in a new glass wing of the Palace of the Parliament, one of the largest administrative buildings in the world.</item>
        <item>The Jewish Museum in Bucharest, Romania is located in the former Templul Unirea Sfântă synagogue, which survived both World War II and Nicolae Ceauşescu unscathed.</item>
        <item>The National Military Museum, was established in 1923 by King Ferdinand. It has been at its present site since 1988, in a building finished in 1898.</item>
        <item>The Museum of the Romanian Railways in Bucharest was inaugurated on June 10, 1939, under the name of \"Muzeul Ceferiștilor\", during the \"Ceferiadei\" celebrations that celebrated the 70th anniversary of the opening of the Bucharest-Filaret-Giurgiu railway. The original location was in the park and arenas of the Giulesti Stadium.</item>
    </string-array>
    <string-array name="museums_hours">
        <item>Monday &#8211; Tuesday: Closed\nWednesday &#8211; Sunday: 10:00&#8211;18:00</item>
        <item>Monday &#8211; Thursday: 08:00&#8211;16:30\nFriday: 08:00&#8211;14:00\nSaturday &#8211; Sunday: Closed</item>
        <item>Monday: Closed\nTuesday &#8211; Friday: 10:00&#8211;18:00\nSaturday &#8211; Sunday: 10:00&#8211;19:00</item>
        <item>Monday: Closed\nTuesday &#8211; Sunday: 09:00&#8211;17:00</item>
        <item>Monday &#8211; Tuesday: Closed\nWednesday &#8211; Sunday: 09:00&#8211;17:00</item>
        <item>Everyday: 10:00&#8211;18:00</item>
        <item>Monday &#8211; Tuesday: Closed\nWednesday &#8211; Sunday: 10:00&#8211;18:00</item>
        <item>Monday &#8211; Thursday: 10:00&#8211;14:00\nFriday: 10:00&#8211;13:00\nSaturday: Closed\nSunday: 10:00&#8211;13:00</item>
        <item>Monday &#8211; Tuesday: Closed\nWednesday &#8211; Sunday: 09:00&#8211;17:00</item>
        <item>Monday &#8211; Tuesday: Closed\nWednesday &#8211; Sunday: 10:00&#8211;16:00</item>
    </string-array>
    <string-array name="museums_phones">
        <item>21 313 3030</item>
        <item>21 317 9103</item>
        <item>21 312 8826</item>
        <item>21 317 9661</item>
        <item>21 315 8207</item>
        <item>21 314 0375</item>
        <item>21 318 9137</item>
        <item>21 311 0870</item>
        <item>21 319 5904</item>
        <item>31 620 3902</item>
    </string-array>
    <string-array name="parks_names">
        <item>Băneasa Zoo</item>
        <item>Herăstrău Park</item>
        <item>Cișmigiu Gardens</item>
        <item>Tineretului Park</item>
        <item>Alexandru Ioan Cuza Park</item>
        <item>Carol Park</item>
        <item>Drumul Taberei Park</item>
        <item>Bucharest Botanical Garden</item>
        <item>Kiseleff Park</item>
    </string-array>
    <string-array name="parks_addresses">
        <item>Strada Vadul Moldovei 4, Bucharest</item>
        <item>Bulevardul Aviatorilor, Bucharest</item>
        <item>Bulevardul Regina Elisabeta, Bucharest</item>
        <item>Bulevardul Tineretului, Bucharest</item>
        <item>Strada Liviu Rebreanu, Bucharest</item>
        <item>Bulevardul Mărășești, Bucharest</item>
        <item>Drumul Taberei, Bucharest</item>
        <item>Șoseaua Cotroceni 32, Bucharest</item>
        <item>Șoseaua Pavel Dimitrievici Kiseleff, Bucharest</item>
    </string-array>
    <string-array name="parks_descriptions">
        <item>Zoo Băneasa is a zoo in Bucharest, Romania, located in a northern district of the city, called Băneasa.</item>
        <item>Herăstrău Park is a large park on the northern side of Bucharest, Romania, around Lake Herăstrău, one of the lakes formed by the Colentina River.</item>
        <item>Cișmigiu Park is a vast English&#8211;style garden with fountains, monuments and a popular boating lake where the landmark Monte Carlo restaurant stands on a central island. Elegant pre&#8211;communist buildings line nearby Regina Maria boulevard. The 19th&#8211;century Gambrinus Brewery serves local beer and traditional food, and surrounding streets have snack bars, pubs and stylish, low&#8211;key nightclubs.</item>
        <item>The largest park in the south part of Bucharest, featuring some of the best playgrounds in the city. Divided into two parts, the main section (closest to Tineretului metro) offers a few rides for kids, trampolines and dodgems, as well as playgrounds and plenty of tree-lined avenues great for strolling.</item>
        <item>Large park featuring a lake with 5 small islands, plus a church, playgrounds and sports facilities.</item>
        <item>Carol Park (Romanian: Parcul Carol) is a public park in Bucharest, Romania, named after King Carol I of Romania. A French garden located in the southern-central area of Bucharest, partly on Filaret hill, originally capable of hosting various exhibitions, it suffered considerable modifications during the communist regime, including a name change to Liberty Park (Romanian: Parcul Libertății).</item>
        <item>A beautiful park with children\'s playgrounds, alleys you can walk, an impressive suspended bridge beautifully lighting during the evening, a large fountain and green spaces.</item>
        <item>The Bucharest Botanical Garden, now named after its founder, Dimitrie Brândză, is located in the Cotroceni neighbourhood of Bucharest, Romania. It has a surface of 17.5 hectares, and has more than 10,000 species of plants.</item>
        <item>Green space demarcated around 1832, with sculptures and busts of notable Romanians and Roman poet Publius Ovidius Naso (Romanian: Ovidiu).</item>
    </string-array>
    <string-array name="parks_hours">
        <item>Monday &#8211; Friday: 09:00&#8211;19:00\nSaturday &#8211; Sunday: 08:00&#8211;20:00</item>
        <item>Open 24/7</item>
        <item>Open 24/7</item>
        <item>Open 24/7</item>
        <item>Open 24/7</item>
        <item>Open 24/7</item>
        <item>Open 24/7</item>
        <item>Everyday: 08:00&#8211;20:00</item>
        <item>Open 24/7</item>
    </string-array>
    <string-array name="parks_phones">
        <item>21 269 0600</item>
        <item>744 630 000</item>
        <item>21 224 5860</item>
        <item>21 224 5860</item>
        <item> </item>
        <item> </item>
        <item>21 410 2550</item>
        <item>21 410 9139</item>
        <item>21 319 3253</item>
    </string-array>
    <string-array name="palaces_names">
        <item>Palace of the Parliament</item>
        <item>Cotroceni Palace</item>
        <item>Crețulescu Palace</item>
        <item>Mogoșoaia Palace</item>
        <item>Cantacuzino Palace</item>
    </string-array>
    <string-array name="palaces_addresses">
        <item>Strada Izvor 2&#8211;4, Bucharest</item>
        <item>Bulevardul Geniului 1, Bucharest</item>
        <item>Strada Știrbei Vodă 39, Bucharest</item>
        <item>Strada Valea Parcului 1, Mogoșoaia</item>
        <item>Calea Victoriei 141, Bucharest</item>
    </string-array>
    <string name="placeholder_name">National Museum of Romanian History</string>
    <string name="placeholder_address">Calea Victoriei 12, Bucharest</string>
</resources>