<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootYellow"
    tools:context="com.danieldogeanu.android.tourguide.MainActivity">

    <ImageView
        android:id="@+id/main_bg_image"
        android:src="@drawable/main_activity_bg"
        android:contentDescription="@string/cd_main_bg_img"
        style="@style/MainActivityBackgroundImage" />

    <RelativeLayout
        android:id="@+id/screen_container"
        style="@style/MainScreenContainer">

        <LinearLayout
            android:id="@+id/city_title"
            style="@style/MainTitle">

            <TextView
                android:text="@string/city_name"
                style="@style/MainTitleCityName" />

            <TextView
                android:text="@string/app_name"
                style="@style/MainTitleSubtitle" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btns_container"
            style="@style/FancyButtonsContainer">

            <include
                layout="@layout/fancy_btn"
                android:id="@+id/museums_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <include
                layout="@layout/fancy_btn"
                android:id="@+id/parks_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/museums_btn"
                android:layout_toEndOf="@id/museums_btn" />

            <include
                layout="@layout/fancy_btn"
                android:id="@+id/palaces_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_below="@id/museums_btn" />

            <include
                layout="@layout/fancy_btn"
                android:id="@+id/monuments_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_below="@id/parks_btn"
                android:layout_toRightOf="@id/palaces_btn"
                android:layout_toEndOf="@id/palaces_btn" />

            <View
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/museums_btn"
                android:layout_toEndOf="@id/museums_btn"
                style="@style/VerticalDivider" />

            <View
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/museums_btn"
                style="@style/HorizontalDivider" />

            <View
                android:layout_toRightOf="@id/palaces_btn"
                android:layout_toEndOf="@id/palaces_btn"
                android:layout_below="@id/museums_btn"
                style="@style/VerticalDivider" />

            <View
                android:layout_toRightOf="@id/museums_btn"
                android:layout_toEndOf="@id/museums_btn"
                android:layout_below="@id/parks_btn"
                style="@style/HorizontalDivider" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
